Fix edit glyph alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ th {
 
 .glyphicon-remove-circle {
   font-size: 1em;
+  padding: 0;
+  position: relative;
+  top: -0.07em;
 }
 
 .glyphicon-remove-circle:hover {
